Create Item Views

--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 <html>
     <body>
         <h1>Hello User!</h1>
+        <a asp-action="Index" asp-controller="Item">View Wishlist</a>
     </body>
 </html>
 
